# STRING-VRNetzer

./: .gitignore  .gitmodules  .project  README.md  converter_test.py  log.py  main.py  p4c_test.py  requirements.txt  sample.json  test.gml.graphml  test.sif  uninstall.txt  upload_test.py
PPIs/: load_files.py  main.py  read_string.py  settings.py
SVRNetzer/: __init__.py  main.py  pyproject.toml
SVRNetzer/SVRNetzer.egg-info/: PKG-INFO  SOURCES.txt
SVRNetzer/cytoscape_util/: cytoscape_parser.py  vrnetzer_commands.py
SVRNetzer/flaks/: app_route.py
SVRNetzer/test/: converter_test.py  upload_test.py
SVRNetzer/util/: app_route.py  argumentparser.py  converter.py  layouter.py  map_small_on_large.py  settings.py  string_uploader.py  upload_util.py  uploader.py  util.py  workflows.py
StringEx/: requirements.txt
VRNetzerApp/: .project  pom.xml
not_necessary/: argumentparser.py  converter_test.py  cytoscape_commands.py  cytoscape_parser.py  export_cytoscape_pos.py  extract_colors_from_style.py  graphml_parser.py  load_json.py  main.py  process_util.py  string_commands.py  upload_test.py  upload_util.py  vrnetzer_commands.py
src/: GlobalData.py  STRING-VRNetzer.code-workspace  __init__.py  app_route.py  argument_parser.py  argumentparser.py  cartoGRAPHtest.py  commands.py  convert.py  converter.py  converter_test.py  create_network.py  cytoscape_commands.py  cytoscape_parser.py  extrac_colors_from_style.py  graphml_parser.py  layouter.py  load_json.py  main.py  map_onto_ppi.py  map_small_on_large.py  settings.py  string_commands.py  tmp.txt  upload_util.py  (+6 more)
(+118 files in other folders)
