[project]
name = "SVRNetzer"
version = "0.0.1"
authors = [
  { name="Till Pascal Oblau", email="till@menchelab.com" },
]
description = "Extension for the VRNetzer to upload data from STRING networks exported from Cytoscape using the VRNetzer App"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/menchelab/STRING-VRNetzer"
"Bug Tracker" = "https://github.com/menchelab/STRING-VRNetzer/issues"